--- a/FlashcardManager/FlashcardManager.csproj
+++ b/FlashcardManager/FlashcardManager.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Flashcard.cs" />
     <Compile Include="FlashcardAdd.cs">
       <SubType>Form</SubType>
     </Compile>
